add initial habit state - ENABLED
